--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
         build: 
             context: ./service1
             dockerfile: ./Dockerfile
+        volumes: 
+            - ./service1:/app
         ports: 
             - 5000:5000
     
@@ -14,9 +16,13 @@ services:
         build: 
             context: ./service2
             dockerfile: ./Dockerfile
+        volumes: 
+            - ./service2:/usr/src/app
         environment: 
             NODE_ENV: production
         ports: 
             - 3000:3000
+        depends_on: 
+            - service1
 
   
