--- a/service1/requirements.txt
+++ b/service1/requirements.txt
@@ -1,3 +1,12 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-flask==1.1.2
+aniso8601==9.0.1
+click==8.0.1
+Flask==2.0.1
+Flask-RESTful==0.3.9
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+pytz==2021.1
+six==1.16.0
+Werkzeug==2.0.1
 gunicorn==20.0.4
