--- a/service2/Dockerfile
+++ b/service2/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:12.18-alpine
+FROM node:16-alpine
 WORKDIR /usr/src/app
-COPY package.json ./
-RUN yarn install
-COPY . .
+ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json yarn.lock ./
+COPY ./src ./src
+COPY ./public ./public
 EXPOSE 3000
-CMD ["yarn", "start"]
+RUN yarn install
+CMD [ "yarn", "start" ]
